link aside aggiunti

--- a/base_di_partenza/index.html
+++ b/base_di_partenza/index.html
@@ -8151,15 +8151,61 @@
         <aside>
           <h3>DISCOVER MORE OF WHAT MATTERS TO YOU</h3>
           <div id="discover">
-            <button class="aside-btn">Programming</button>
-            <button class="aside-btn">Data Science</button>
-            <button class="aside-btn">Technology</button>
-            <button class="aside-btn">Self Improvement</button>
-            <button class="aside-btn">Writing</button>
-            <button class="aside-btn">Relationships</button>
-            <button class="aside-btn">Machine Learning</button>
-            <button class="aside-btn">Productivity</button>
-            <button class="aside-btn">Politics</button>
+            <button class="aside-btn">
+              <a
+                href="https://medium.com/tag/programming?source=home---------0-----------programming-------30---3f5ee0d3_f813_44b8_a20d_9aa6f8122e25-------18"
+                >Programming</a
+              >
+            </button>
+            <button class="aside-btn">
+              <a
+                href="https://medium.com/tag/data-science?source=home---------1-----------data_science-------30---3f5ee0d3_f813_44b8_a20d_9aa6f8122e25-------18"
+              >
+                Data Science</a
+              >
+            </button>
+            <button class="aside-btn">
+              <a
+                href="https://medium.com/tag/technology?source=home---------2-----------technology-------30---3f5ee0d3_f813_44b8_a20d_9aa6f8122e25-------18"
+                >Technology</a
+              >
+            </button>
+            <button class="aside-btn">
+              <a
+                href="https://medium.com/tag/self-improvement?source=home---------3-----------self_improvement-------30---3f5ee0d3_f813_44b8_a20d_9aa6f8122e25-------18"
+                >Self Improvement</a
+              >
+            </button>
+            <button class="aside-btn">
+              <a
+                href="https://medium.com/tag/writing?source=home---------4-----------writing-------30---3f5ee0d3_f813_44b8_a20d_9aa6f8122e25-------18"
+                >Writing</a
+              >
+            </button>
+            <button class="aside-btn">
+              <a
+                href="https://medium.com/tag/relationships?source=home---------5-----------relationships-------30---3f5ee0d3_f813_44b8_a20d_9aa6f8122e25-------18"
+                >Relationships</a
+              >
+            </button>
+            <button class="aside-btn">
+              <a
+                href="https://medium.com/tag/machine-learning?source=home---------6-----------machine_learning-------30---3f5ee0d3_f813_44b8_a20d_9aa6f8122e25-------18"
+                >Machine Learning</a
+              >
+            </button>
+            <button class="aside-btn">
+              <a
+                href="https://medium.com/tag/productivity?source=home---------7-----------productivity-------30---3f5ee0d3_f813_44b8_a20d_9aa6f8122e25-------18"
+                >Productivity</a
+              >
+            </button>
+            <button class="aside-btn">
+              <a
+                href="https://medium.com/tag/politics?source=home---------8-----------politics-------30---3f5ee0d3_f813_44b8_a20d_9aa6f8122e25-------18"
+                >Politics</a
+              >
+            </button>
             <div id="help">
               <ul>
                 <li>Help</li>
