add 500 font, add class for div trending without number, margin fix

--- a/base_di_partenza/index.html
+++ b/base_di_partenza/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Spectral:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Spectral:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
     <title>Medium - Where good ideas find you.</title>
@@ -8086,7 +8086,7 @@
     <section id="trending-container">
       <div class="trending" id="trend1">
         <h2 class="number">01</h2>
-        <div>
+        <div class="trendingNoNumber">
           <figcaption><img src="./assets/imgs/image01.jpeg" alt="img" />Tom Cooper</figcaption>
           <h3>Ukraine War, 23 October 2022</h3>
           <p>Oct 23 · 5 min read</p>
@@ -8095,7 +8095,7 @@
 
       <div class="trending" id="trend2">
         <h2 class="number">02</h2>
-        <div>
+        <div class="trendingNoNumber">
           <figcaption>
             <img src="./assets/imgs/image02.png" alt="img" />Arthur Hayes in Entrepreneur's Handbook
           </figcaption>
@@ -8106,7 +8106,7 @@
 
       <div class="trending" id="trend3">
         <h2 class="number">03</h2>
-        <div>
+        <div class="trendingNoNumber">
           <figcaption><img src="./assets/imgs/image03.jpeg" alt="img" />Tom Cooper</figcaption>
           <h3>How I Learned to Love My Breasts Even Though One Is A Horcrux For Voldemort</h3>
           <p>Oct 26 · 2 min read</p>
@@ -8115,7 +8115,7 @@
 
       <div class="trending" id="trend4">
         <h2 class="number">04</h2>
-        <div>
+        <div class="trendingNoNumber">
           <figcaption><img src="./assets/imgs/image04.png" alt="img" />Frank Mastropolo in The Riffk</figcaption>
           <h3>The Night Paul McCartney Donned a Disguise at Fillmore East</h3>
           <p>Oct 22 · 3 min read <img src="./assets/imgs/svg/star.svg" alt="stars" id="star" /></p>
@@ -8124,7 +8124,7 @@
 
       <div class="trending" id="trend5">
         <h2 class="number">05</h2>
-        <div>
+        <div class="trendingNoNumber">
           <figcaption>
             <img src="./assets/imgs/image05.jpeg" alt="img" />Frank Andrade in Towards Data Science
           </figcaption>
@@ -8135,7 +8135,7 @@
 
       <div class="trending" id="trend6">
         <h2 class="number">06</h2>
-        <div>
+        <div class="trendingNoNumber">
           <figcaption>
             <img src="./assets/imgs/image06.png" alt="img" />Wesley Smits in JavaScript in Plain English
           </figcaption>
